fixed white space issue on the right

--- a/stylehome.css
+++ b/stylehome.css
@@ -5,11 +5,17 @@
 }
 html
 {
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
     scroll-behavior: smooth;
     font-size: 62.5%;
 }
 body 
 {
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
     overflow-x: hidden;
     height: auto;
     min-height: 100vh;
@@ -23,7 +29,7 @@ nav
     width: 100%;
     font-family: 'Open Sans', sans-serif;
     background-color: #013654;
-    height: 67px;
+    height: 6.7rem;
     position:fixed;
     top: 0;
 }
@@ -31,7 +37,7 @@ nav
 .logo
 {
     color: rgb(239, 239, 239);
-    letter-spacing: 2px;
+    letter-spacing: 0.2rem;
     font-size: 2rem;
     font-weight: bold;
 }
@@ -49,7 +55,7 @@ nav
 {
     color: rgb(239, 239, 239);
     text-decoration: none;
-    letter-spacing: 2px;
+    letter-spacing: 0.2rem;
     font-weight: bold;
     font-size: 1.4rem;
 }
@@ -58,7 +64,7 @@ nav
     text-decoration: underline;
     font-weight: bolder;
     font-size: 1.6rem;
-    border-radius: 10px;
+    border-radius: 1rem;
 }
 
 .burger
@@ -68,14 +74,14 @@ nav
 }
 .burger div
 {
-    width: 20px;
-    height: 2px;
+    width: 2rem;
+    height: 0.2rem;
     background-color: rgb(239, 239, 239);
-    margin: 5px;
+    margin: 0.5rem;
     transition: all 0.3s ease;
 }
 
-@media screen and (max-width:1024px)
+@media (max-width:1024px)
 {
     .nav-links
     {
@@ -83,7 +89,8 @@ nav
     }
 }
 
-@media screen and (max-width:768px)
+/* Media Query for Mobile Devices */
+@media (max-width: 480px)
 {
     body{
         overflow-x: hidden;
@@ -206,8 +213,8 @@ nav
     position: static;
     font-family: 'Sora', sans-serif;
     background-color: rgb(255, 255, 255);
-    height: 400px;
-    width: 500px;
+    height: 40rem;
+    width: 50rem;
     margin: 5rem auto;
     text-align: center;
 }
@@ -236,7 +243,7 @@ nav
 .Container hr
 {
     margin-top: 1.5rem;
-    border: 0.5px solid black;
+    border: 0.05rem solid black;
 }
 .words
 {
